# vSphere-MCP-Pro

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  env.example  pyproject.toml
vsphere_mcp_pro/: __init__.py  audit.py  authz.py  config.py  server.py  vsphere_client.py
