[project]
name = "vsphere-mcp-pro"
version = "0.1.0"
description = "Feature-rich, secure MCP server for VMware vCenter 8.0+"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.14.0",
  "requests>=2.32.0",
  "urllib3>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
vsphere-mcp-pro = "vsphere_mcp_pro.server:main"
