[project]
name = "vsphere-mcp-pro"
version = "0.2.0"
description = "Feature-rich, secure MCP server for VMware vCenter 8.0+"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "mcp>=1.14.0",
  "requests>=2.32.0",
  "urllib3>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0",
]

[project.scripts]
vsphere-mcp-pro = "vsphere_mcp_pro.server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
